fixed some spacing issues with the footer

--- a/src/home/DarkLearnSection.module.css
+++ b/src/home/DarkLearnSection.module.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  padding-bottom:"500px"
 }
 .learnJavaPythonContainer {
   height: 400px;
