--- a/src/main/DarkFooter.module.css
+++ b/src/main/DarkFooter.module.css
@@ -4,6 +4,7 @@
   bottom: 0;
   width: 100%;
   z-index:1300;
+  margin:0;
 }
 
 /* .emailQueryContainer{
