--- a/src/main/DarkHeader.module.css
+++ b/src/main/DarkHeader.module.css
@@ -2,7 +2,7 @@
   background-color: #222222;
   box-shadow: 0px 4px 8px rgba(34, 34, 34, 0.25);
   position:sticky;
-  z-index: 1201; /* +1 the sidenav */
+  z-index: 1301; /* +1 the sidenav */
 }
 .toolBar {
   display: flex;
